# Project-Dependency-Detector

./: LICENSE  MANIFEST.in  README.md  pyproject.toml
src/code_impact_analyzer/: __init__.py  analyzer.py  cli.py  models.py  parser.py
tests/: test_analyzer.py  test_cli.py
tests/fixtures/sample_project/api/: routes.py
tests/fixtures/sample_project/auth/: login.py
tests/fixtures/sample_project/tests/: test_login.py
tests/fixtures/sample_project/user/: service.py
