[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "code-change-impact-analyzer"
version = "0.1.0"
description = "Analyze and predict impacted Python modules from code changes using static dependency analysis."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
  { name = "Vidhi Bhutia", email = "vidhibhutia2407@gmail.com" }
]
keywords = ["static-analysis", "dependency-graph", "impact-analysis", "python", "cli"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries",
  "Topic :: Software Development :: Quality Assurance"
]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.12.0",
  "mypy>=1.11.0"
]

[project.urls]
PyPI = "https://pypi.org/project/code-change-impact-analyzer/"

[project.scripts]
impact-analyzer = "code_impact_analyzer.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/code_impact_analyzer"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
norecursedirs = ["tests/fixtures"]

[tool.mypy]
python_version = "3.9"
strict = true
warn_unused_configs = true
mypy_path = "src"
